[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "streamflowops-client"
version = "0.1.0"
description = "HTTP client for the StreamflowOps DataOps REST API"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
py-modules = ["client"]
